Bug#64556: Interrupting a query inside InnoDB causes an unrelated warning to be raised

Interrupting a statement (with KILL QUERY) that is executing inside
InnoDB leads to an unrelated warning being raised in the context of
the connection whose statement was interrupted.